apps/cortex-chat/cortex-chat-backend-simple-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations: {}
  labels:
    app: cortex-chat-backend-simple
    component: backend
  name: cortex-chat-backend-simple
  namespace: cortex-chat
spec:
  clusterIP: 10.43.34.83
  clusterIPs:
  - 10.43.34.83
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: cortex-chat-backend-simple
  sessionAffinity: None
  type: ClusterIP
