apps/cortex-chat/cortex-chat-proxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations: {}
  name: cortex-chat-proxy
  namespace: cortex-chat
spec:
  clusterIP: 10.43.73.13
  clusterIPs:
  - 10.43.73.13
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: cortex-chat-proxy
  sessionAffinity: None
  type: ClusterIP
