apps/cortex-chat/cortex-chat-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations: {}
  name: cortex-chat
  namespace: cortex-chat
spec:
  clusterIP: 10.43.42.62
  clusterIPs:
  - 10.43.42.62
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  - name: api
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: cortex-chat
  sessionAffinity: None
  type: ClusterIP
