apps/cortex-chat/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations: {}
  name: redis
  namespace: cortex-chat
spec:
  clusterIP: 10.43.210.189
  clusterIPs:
  - 10.43.210.189
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 6379
    protocol: TCP
    targetPort: 6379
  selector:
    app: redis
  sessionAffinity: None
  type: ClusterIP
